add devcenter env

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -70,9 +70,9 @@ jobs:
           AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
           AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
           AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-          AZURE_PRINCIPAL_ID: ${{ vars.AZURE_PRINCIPAL_ID }}
-          SERVICE_API_RESOURCE_EXISTS: ${{ vars.SERVICE_API_RESOURCE_EXISTS }}
-          SERVICE_WEB_RESOURCE_EXISTS: ${{ vars.SERVICE_WEB_RESOURCE_EXISTS }}
-          REACT_APP_API_BASE_URL: ${{ vars.REACT_APP_API_BASE_URL }}
-          USE_APIM: ${{ vars.USE_APIM }}
+          AZURE_DEVCENTER_NAME: ${{ vars.AZURE_DEVCENTER_NAME }}
+          AZURE_DEVCENTER_PROJECT: ${{ vars.AZURE_DEVCENTER_PROJECT }}
+          AZURE_DEVCENTER_CATALOG: ${{ vars.AZURE_DEVCENTER_CATALOG }}
+          AZURE_DEVCENTER_ENVIRONMENT_DEFINITION: ${{ vars.AZURE_DEVCENTER_ENVIRONMENT_DEFINITION }}
+          AZURE_DEVCENTER_ENVIRONMENT_TYPE: ${{ vars.AZURE_DEVCENTER_ENVIRONMENT_TYPE }}
 
