--- a/azure.yaml
+++ b/azure.yaml
@@ -3,6 +3,13 @@
 name: todo-nodejs-mongo-aca
 metadata:
   template: todo-nodejs-mongo-aca@0.0.1-beta
+platform:
+  type: devcenter
+  config:
+      catalog: test-catalog
+      environmentDefinition: Todo-Mongo-ACA
+      name: dc-pv44d74rp44bs
+      project: dcprj-pv44d74rp44bs
 services:
   web:
     project: ./src/web
